--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mini-notes",
 	"version": "1.0.0",
-	"description": "Create and manage fast mini notes in a masonry view with pinning, tagging, filtering, and drag-and-drop organization.",
+	"description": "Quickly jot down notes during focus sessions. Review them later in a colorful masonry view.",
 	"main": "main.js",
 	"type": "module",
 	"scripts": {
