Add coloring steps & funding url to README.md

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
 	"description": "Quickly jot down notes during focus sessions. Review them later in a colorful masonry view.",
 	"author": "Bana Tawalbeh",
 	"authorUrl": "https://github.com/rknastenka",
+	"fundingUrl": "https://ko-fi.com/rknastenka",
 	"isDesktopOnly": false
 }
