--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"keywords": ["obsidian", "plugin", "mini-notes", "dashboard", "notes"],
 	"author": "Bana Tawalbeh",
-	"license": "0-BSD",
+	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
 		"esbuild": "0.25.5",
