docs: update plugin description

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Mini Notes",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Quickly jot down notes during focus sessions. Review them later in a colorful masonry view.",
+	"description": "Your quick thoughts, beautifully displayed, with a Google Keep-style colorful card-based view.",
 	"author": "Bana Tawalbeh",
 	"authorUrl": "https://github.com/rknastenka",
 	"fundingUrl": "https://ko-fi.com/rknastenka",
